--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -1,14 +1,19 @@
-name: Hello World
+name: Intro to ci
 
 on:
   push:
 
 jobs:
-  hello-world:
+  build:
     runs-on: ubuntu-latest
 
     steps:
+      - name : Checkout
       #recupéré les actions de la commu
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
       #-name: Run a onle-line script
-      - run: echo Hello, world!
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
