--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -12,6 +12,13 @@ jobs:
       #recupéré les actions de la commu
         uses: actions/checkout@v4
       #-name: Run a onle-line script
+
+      - name: Setup PNPM
+        run: pnpm/action-setup@v2.4.0
+        with:
+          version: 8
+          run_install: false
+
       - name: Install dependencies
         run: npm install
 
