--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -14,7 +14,7 @@ jobs:
       #-name: Run a onle-line script
 
       - name: Setup PNPM
-        run: pnpm/action-setup@v2.4.0
+        uses: pnpm/action-setup@v2.4.0
         with:
           version: 8
           run_install: false
