--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -11,16 +11,28 @@ jobs:
       - name : Checkout
       #recupéré les actions de la commu
         uses: actions/checkout@v4
-      #-name: Run a onle-line script
 
       - name: Setup PNPM
-        uses: pnpm/action-setup@v2.4.0
+        uses: oven-sh/setup-bun@v1
         with:
-          version: 8
+          bun-version: latest
           run_install: false
 
       - name: Install dependencies
-        run: pnpm install
+        run: bun install
 
       - name: Build
-        run: pnpm run build
+        run: bun run build
+
+
+      #- name: Setup PNPM
+      #  uses: pnpm/action-setup@v2.4.0
+      #  with:
+      #    version: 8
+      #    run_install: false
+
+      #- name: Install dependencies
+      #  run: pnpm install
+
+      #- name: Build
+      #  run: pnpm run build
