--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -2,6 +2,8 @@ name: Intro to ci
 
 on:
   push:
+env:
+  NAME: toto
 
 jobs:
   build:
@@ -12,27 +14,42 @@ jobs:
       #recupéré les actions de la commu
         uses: actions/checkout@v4
 
-      - name: Setup PNPM
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-          run_install: false
-
-      - name: Install dependencies
-        run: bun install
-
-      - name: Build
-        run: bun run build
-
+      - run: echo "hellp ${{ env.NAME }}"
 
       #- name: Setup PNPM
-      #  uses: pnpm/action-setup@v2.4.0
+      #  uses: oven-sh/setup-bun@v1
       #  with:
-      #    version: 8
+      #    bun-version: latest
       #    run_install: false
 
       #- name: Install dependencies
-      #  run: pnpm install
+      #  run: bun install
 
       #- name: Build
-      #  run: pnpm run build
+      #  run: bun run build
+
+
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v2.4.0
+        with:
+          version: 8
+          run_install: false
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Build
+        run: pnpm run build
