workflow -> deplay vercel fix2

--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -89,6 +89,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
 
+      - name: Install dependencies
+        run: pnpm install
+
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
