--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -110,6 +110,9 @@ jobs:
 
       - name: 'Deploy to Netlify'
         uses: jsmrcaga/action-netlify-deploy@v2.0.0
+        run: |
+          pnpm install
+          pnpm run build
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
