--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -109,8 +109,8 @@ jobs:
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: 'Deploy to Netlify'
-        uses: jsmrcaga/action-netlify-deploy@v2.0.0
         run: |
+          jsmrcaga/action-netlify-deploy@v2.0.0
           pnpm install
           pnpm run build
         with:
