--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -109,10 +109,7 @@ jobs:
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: 'Deploy to Netlify'
-        run: |
-          jsmrcaga/action-netlify-deploy@v2.0.0
-          pnpm install
-          pnpm run build
+        uses: jsmrcaga/action-netlify-deploy@v2.0.0
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
