--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -113,3 +113,5 @@ jobs:
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          install_command: pnpm install
+          build_command: pnpm run build
